--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "javascript-obfuscator": "^4.1.1",
     "jszip": "^3.10.1",
     "node-unrar-js": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readline": "^1.3.0"
   }
 }
